# MEGNET

./: conda-lock.yml  pyproject.toml
