[tool.poetry]
name = "megnet"
version = "1.3.2"
description = "MatErials Graph Networks for machine learning of molecules and crystals."
authors = ["Chi Chen"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymatgen = "2022.11.7"
pandas = "1.5.1"
tensorflow = "2.11.0"
numpy = "1.23.5"
monty = "2022.9.9"
tqdm = "4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = ">6.1.1,<7.0"
coveralls = "^3.3.1"
pycodestyle = "^2.10.0"
mypy = "^0.991"
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
types-tabulate = "^0.9.0.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
